--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 install:
   - eval $(ssh-agent) && chmod 600 deploy_key.pem && ssh-add deploy_key.pem
   - git remote add deploy git@github.com:eliasdorneles/eliasdorneles.github.io.git || echo "Remote already exists"
-  - git remove -v
+  - git remote -v
   - pip install -r requirements.txt
 
 script:
