another take, using deploy script

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,6 @@ before_install:
   -in deploy_key.pem.enc -out deploy_key.pem -d
 
 install:
-  - eval $(ssh-agent) && chmod 600 deploy_key.pem && ssh-add deploy_key.pem
-  - git remote add deploy git@github.com:eliasdorneles/eliasdorneles.github.io.git || echo "Remote already exists"
-  - git remote -v
   - pip install -r requirements.txt
 
 script:
@@ -17,8 +14,6 @@ script:
 deploy:
   provider: script
   script:
-    - make clean compile
-    - ghp-import -m "Update site" output
-    - git push -f deploy gh-pages:master
+    - ./deploy.sh
   on:
     branch: source
