--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ python: 2.7
 before_install:
 - openssl aes-256-cbc -K $encrypted_0f3d298afe4e_key -iv $encrypted_0f3d298afe4e_iv
   -in deploy_key.pem.enc -out deploy_key.pem -d
+- eval $(ssh-agent) && chmod 600 deploy_key.pem && ssh-add deploy_key.pem
+- git remote add deploy git@github.com:eliasdorneles/eliasdorneles.github.io.git || echo "Remote already exists"
+- git remote -v
+
 
 install:
   - pip install -r requirements.txt
