--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-pelican==3.5.0
+pelican==3.6.3
 mistune==0.5.1
 ghp-import==0.4.1
+Jinja2==2.8
 Markdown==2.6.2
 python-slugify==1.1.3
+beautifulsoup4==4.4.1
